htmxology-macros/src/snapshots/htmxology_macros__display_delegate__snapshot_tests__enum_with_generic.snap
---
source: htmxology-macros/src/display_delegate.rs
expression: test_display_delegate(input)
---
#[allow(unused)]
mod __test {
    impl<T> std::fmt::Display for Result<T> {
        fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
            match self {
                Self::Success(page) => write!(f, "{page}"),
                Self::Error(page) => write!(f, "{page}"),
            }
        }
    }
}
