htmxology-macros/src/snapshots/htmxology_macros__display_delegate__snapshot_tests__enum_with_lifetime.snap
---
source: htmxology-macros/src/display_delegate.rs
expression: test_display_delegate(input)
---
#[allow(unused)]
mod __test {
    impl<'a> std::fmt::Display for Cow<'a> {
        fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
            match self {
                Self::Borrowed(page) => write!(f, "{page}"),
                Self::Owned(page) => write!(f, "{page}"),
            }
        }
    }
}
